[metadata]
name = terminal-mines
version = 1.3
author = Joel Eager

url = https://github.com/JoelEager/terminal-mines

description = A command-line clone of Minesweeper in Python
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT

classifiers =
    Topic :: Games/Entertainment :: Puzzle Games
    Environment :: Console
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
install_requires =
    click==7.0

[options.entry_points]
console_scripts =
    mines = terminal_mines.mines:main
